fix: implementa loop para caso haja mais de um produto no pedido
